Some alignment fix

--- a/src/app/(mainroot)/category/[name]/styles.scss
+++ b/src/app/(mainroot)/category/[name]/styles.scss
@@ -1,9 +1,11 @@
 .games-container {
     min-height: 100vh;
-    margin-top: 6.5rem;
+    // margin-top: 6.5rem;
+    margin-left: 1rem;
     // margin-left: 4.5rem;
     // width: calc(100% - 4.5rem);
-    width: 100%;
+    // width: 100%;
+    width: calc(100% - 1rem);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -205,7 +207,7 @@
 
 @media screen and (max-width: 925px) {
     .games-container {
-        margin-left: unset;
-        width: 100%;
+        // margin-left: 1rem;
+        // width: 100%;
     }
 }
