--- a/src/app/(mainroot)/collection/[name]/styles.scss
+++ b/src/app/(mainroot)/collection/[name]/styles.scss
@@ -1,9 +1,11 @@
 .collection-main {
     min-height: 100vh;
-    margin-top: 6.5rem;
+    // margin-top: 6.5rem;
+    margin-left: 1rem;
     // margin-left: 4.5rem;
     // width: calc(100% - 4.5rem);
-    width: 100%;
+    // width: 100%;
+    width: calc(100% - 1rem);
     display: flex;
     flex-direction: column;
     align-items: center;
