--- a/src/core_components/Footer.scss
+++ b/src/core_components/Footer.scss
@@ -14,6 +14,7 @@ footer {
     width: calc(100% - 2rem);
     margin-top: 2rem;
     margin-bottom: 1rem;
+    margin-left: 1rem;
     border-radius: 7px;
 
     .logo {
